<resources>
    <string name="app_name">Quản lý nhân sự</string>
    <string name="menu_settings">Cài đặt hệ thống</string>
    <string name="title_activity_main">Quản lý nhân sự</string>
    <string name="indicator_height">3dip</string>
    <string name="menu_search_item_filter">Tìm kiếm</string>
    <string name="menu_search_item_settings">Điều kiện tìm kiếm</string>
    <string name="menu_sort_item_settings">Trình tự sắp xếp</string>
    <string name="menu_notification">Thông báo</string>
    <string name="host">smtp.gmail.com</string>
    <string name="smtpPort">465</string>
    <string name="socketFactoryPort">465</string>
    <string name="propHost">mail.smtp.host</string>
    <string name="propDebug">mail.debug</string>
    <string name="propAuth">mail.smtp.auth</string>
    <string name="propSmtpPort">mail.smtp.port</string>
    <string name="propSocketFactoryPort">mail.smtp.socketFactory.port</string>
    <string name="propSocketFactoryClass">mail.smtp.socketFactory.class</string>
    <string name="propSocketFactoryFallback">mail.smtp.socketFactory.fallback</string>
    <string name="msg_email_fail">Email was not sent</string>
    <string name="msg_email_send_exception">Could not send email - </string>
    <string name="mail_domain">fujinet.net</string>
    <string name="maddnew">Thêm mới</string>
    <string name="mdetail">Xem chi tiết</string>
    <string name="medit">Chỉnh sửa</string>
    <string name="mdelete">Xóa</string>
    <string name="maddcopy">Sao chép và tạo mới</string>
    <string name="mcall">Gọi</string>
    <string name="mshowhistory">Cập nhật phòng ban-nhóm&#8230;</string>
    <string name="mtitleUser">""</string>
    <string name="titleSearch">&#8230;</string>
    <string name="titleAddNew">Tạo mới</string>
    <string name="titleEdit">Chỉnh sửa</string>
    <string name="titleDelete">Xóa</string>
    <string name="titleUnDelete">Phục hồi</string>
    <string name="titleSave">Lưu</string>
    <string name="titleCancel">Hủy</string>
    <string name="titleYes">Đồng ý</string>
    <string name="titleNo">Không</string>
    <string name="titleBoy">Nam</string>
    <string name="titleGirl">Nữ</string>
    <string name="titleAlone">Độc thân</string>
    <string name="titleGetMarried">Đã kết hôn</string>
    <string name="titleDatabaseTool">Thao tác dữ liệu</string>
    <string name="titleBackup">Sao lưu dữ liệu</string>
    <string name="titleRestore">Phục hồi dữ liệu</string>
    <string name="titleInitData">Khởi tạo dữ liệu master</string>
    <string name="titleImportUserCsv">Nhập dữ liệu nhân viên(txt)</string>
    <string name="titleIsDirector">Director</string>
    <string name="titleIsDeputy">Deputy</string>
    <string name="titleIsManager">Manager</string>
    <string name="titleIsLeader">Leader</string>
    <string name="titleNoDefine">Không chỉ định</string>
    <string name="titleNotFoundData">Không có dữ liệu</string>
    <string name="titleOutputPdf">Xuất dữ liệu...</string>
    <string name="titleProcessing">Đang xử lý, xin vui lòng chờ&#8230;</string>
    <string name="titleAll">Tất cả</string>
    <string name="titleSortAsc">Tăng dần</string>
    <string name="titleSortDesc">Giảm dần</string>
    <string name="titleEXCEL">Excel</string>
    <string name="titlePDF">PDF</string>
    <string name="titleBack">Trở về</string>
    <string name="titleNoItemSelected">Không có dòng nào được chọn</string>
    <string name="titleContactList">Tạo nhân viên từ danh bạ</string>
    <string name="menu_exp_group_dept">Nhóm theo phòng ban</string>
    <string name="menu_exp_group_team">Nhóm theo team</string>
    <string name="menu_exp_group_position">Nhóm theo chức vụ</string>
    <string name="menu_exp_group_sex">Nhóm theo giới tính</string>
    <string name="menu_exp_group_japanese">Nhóm theo trình độ Nhật ngữ</string>
    <string name="menu_exp_group_business_kbn">Nhóm theo chuyên môn</string>
    <string name="menu_exp_group_business_allowance">Nhóm theo PC nghiệp vụ</string>
    <string name="menu_exp_group_keiken">Nhóm theo thâm niên công ty</string>
    <string name="menu_exp_group_keiken_labor">Nhóm theo thâm niên labor</string>
    <string name="menu_exp_group_none">Danh sách nhân viên</string>
    <string name="menu_exp_group_yasumi">Nhóm theo nghỉ việc/làm việc</string>
    <string name="menu_exp_group_keiken_ussol">Nhóm theo thâm niên labor</string>
    <string name="menu_exp_group_labour">Nhóm theo KeepLabor/Ngoài KeepLabor</string>
    <string name="menu_exp_group_salary">Nhóm theo lương</string>
    <string name="menu_exp_group_customer">Nhóm theo khách hàng</string>
    <string name="menu_exp_group_yasumi_yearmonth">Nhóm nghỉ việc theo năm tháng</string>
    <string name="menu_exp_group_yasumi_year">Nhóm nghỉ việc theo các năm </string>
    <string name="menu_exp_group_contract_yearmonth">Nhóm nhận chính thức theo năm tháng</string>
    <string name="menu_exp_group_training_year">Nhóm nhận thử việc trong năm</string>
    <string name="menu_exp_group_contract_year">Nhóm nhận chính thức trong năm</string>
    <string name="menu_exp_group_notcontract_year">Nhóm không nhận sau thử việc</string>
    <string name="menu_exp_group_contract_less_month">Nhóm nhận NV có thâm niên nhỏ hơn {N} tháng</string>
    <string name="menu_exp_group_staff_current_position_not_satified">Nhóm NV có bậc không phù hợp với thâm niên</string>
    <string name="pdf_sort">Trình tự sắp xếp</string>
    <string-array name="sort_arrays">
        <item>Mã nhân viên</item>
        <item>Phòng ban</item>
        <item>Nhóm-tổ</item>
        <item>Chức vụ</item>
        <item>Ngày vào công ty</item>
        <item>Ngày vào nhóm labor</item>
        <item>Trình độ nhật ngữ</item>
    </string-array>
    <string name="deptTitleCode">Mã phòng ban</string>
    <string name="deptTitleName">Tên phòng ban</string>
    <string name="deptTitleManager">Trưởng phòng</string>
    <string name="deptTitleVice">Phó phòng </string>
    <string name="deptTitleCreateDate">Ngày thành lập </string>
    <string name="deptTitleNote">Ghi chú</string>
    <string name="deptBtnEdit">Chỉnh sửa</string>
    <string name="deptBtnSave">Lưu</string>
    <string name="deptBtnAdd">Tạo mới</string>
    <string name="deptBtnCancel">Hủy</string>
    <string name="deptTitleInfor">Thông tin chi tiết phòng ban</string>
    <string name="teamTitleCode">Mã nhóm</string>
    <string name="teamTitleName">Tên nhóm</string>
    <string name="teamTitleManager">Trưởng nhóm</string>
    <string name="teamTitleVice">Phó nhóm </string>
    <string name="teamTitleDept">Phòng ban </string>
    <string name="teamTitleCreateDate">Ngày thành lập </string>
    <string name="teamTitleNote">Ghi chú</string>
    <string name="teamBtnUpdate">Chỉnh sửa</string>
    <string name="teamTitleInfor">Thông tin chi tiết nhóm</string>
    <string name="positionTitleCode">Mã chức vụ</string>
    <string name="positionTitleName">Tên chức vụ</string>
    <string name="positionTitleCodeFJN">Mã FJN</string>
    <string name="positionTitleMinMonth">Số tháng </string>
    <string name="positionTitleAllowance">Phụ cấp</string>
    <string name="positionTitleLevel">Level</string>
    <string name="positionTitleStandardMM">Chuẩn MM</string>
    <string name="positionTitleNote">Ghi chú</string>
    <string name="positionBtnUpdate">Chỉnh sửa</string>
    <string name="positionTitleInfor">Thông tin chi tiết chức vụ</string>
    <string name="companyTitleCode">Mã công ty</string>
    <string name="companyTitleName">Tên công ty</string>
    <string name="companyTitleRyaku">Tên tắt công ty</string>
    <string name="companyTitleCreateDate">Ngày thành lập</string>
    <string name="companyTitleShihon">Vốn cơ bản</string>
    <string name="companyTitleTaxCode">Mã số thuế</string>
    <string name="companyTitleAddress">Địa chỉ công ty</string>
    <string name="companyTitleHomeTel">Điện thoại</string>
    <string name="companyTitleFax">Fax</string>
    <string name="companyTitleVoucherAddress">Địa chỉ gửi hóa đơn</string>
    <string name="companyTitleWebSite">Website</string>
    <string name="companyTitleNote">Ghi chú</string>
    <string name="companyTitleInfor">Công ty</string>
    <string name="userTitleList">Danh sách nhân viên</string>
    <string name="userTitleInfor">Thông tin chi tiết nhân viên</string>
    <string name="userTitleTabBasic">Cơ bản</string>
    <string name="userTitleTabWork">Ban-nhóm</string>
    <string name="userTitleTabOther">Khác</string>
    <string name="userTitleCode">Mã nhân viên</string>
    <string name="userTitleName">Tên nhân viên</string>
    <string name="userTitleGoogleId">Google.Id</string>
    <string name="userTitleSex">Giới tính</string>
    <string name="userTitleMarried">Đã kết hôn</string>
    <string name="userTitleBirthday">Sinh ngày</string>
    <string name="userTitleMarriedDate">Ngày kết hôn</string>
    <string name="userTitleAddress">Địa chỉ</string>
    <string name="userTitleHome_tel">Điện thoại nhà</string>
    <string name="userTitleMobile">Di động</string>
    <string name="userTitleEmail">Email</string>
    <string name="userTitleFax">Fax</string>
    <string name="userTitlePositionCode">Mã chức vụ</string>
    <string name="userTitlePositionName">Chức vụ</string>
    <string name="userTitleDeptCode">Mã phòng ban</string>
    <string name="userTitleDeptName">Phòng ban</string>
    <string name="userTitleTeamCode">Mã nhóm</string>
    <string name="userTitleTeamName">Nhóm(team)</string>
    <string name="userTitleLearnTraining_date">Ngày bắt đầu học việc</string>
    <string name="userTitleLearnTraining_dateEnd">Ngày kết thúc học việc</string>
    <string name="userTitleTraining_date">Ngày bắt đầu thử việc</string>
    <string name="userTitleTraining_dateEnd">Ngày kết thúc thử việc</string>
    <string name="userTitleIn_date">Ngày ký HĐ</string>
    <string name="userTitleJoin_date">Ngày tham gia nhóm labor</string>
    <string name="userTitleOut_date">Ngày cuối cùng làm việc</string>
    <string name="userTitleChkOut_date">Đã nghỉ việc</string>
    <string name="userTitleNote">Ghi chú</string>
    <string name="userTitleTag1">Tag 1</string>
    <string name="userTitleTag2">Tag 2</string>
    <string name="userTitleJapanese">Trình độ nhật ngữ</string>
    <string name="userTitleAllowanceBusiness">Phụ cấp nghiệp vụ</string>
    <string name="userTitleSalary_NotAllowance">Lương cơ bản</string>
    <string name="userTitleSalary_Allowance">Tổng lương(chưa tính bonus)</string>
    <string name="userTitleSalaryTotal">Tổng lương</string>
    <string name="userTitleCustomer">Khách hàng</string>
    <string name="userTitleBusinessKbn">Chuyên môn</string>
    <string name="userTitleBusinessKbnDevelop">Lập trình</string>
    <string name="userTitleBusinessKbnHonyaku">Phiên dịch</string>
    <string name="userTitleBusinessKbnOther">Khác(tổng vụ...)</string>
    <string name="userTitleLabour_Out_date">Ngày kết thúc labor</string>
    <string name="userTitleIsLabour">Nhân viên nhóm labor(hiện tại)</string>
    <string name="userTitlePositionGroup">Nhóm chức danh</string>
    <string name="userTitleProgram">Năng suất lập trình</string>
    <string name="userTitleDetailDesign">Năng suất TKCT</string>
    <string name="userTitleUserKbn">Nhân viên/Khách hàng</string>
    <string name="userTitleUserKbnEmp">Nhân viên</string>
    <string name="userTitleUserKbnCustomer">Khách hàng</string>
    <string name="menu_report_search">Tìm kiếm</string>
    <string name="menu_report_searchitem">Chỉ định điều kiện lọc dữ liệu</string>
    <string name="menu_report_sortlist">Trình tự sắp xếp</string>
    <string name="fab_menu_list_user_check_all">Chọn tất cả</string>
    <string name="fab_menu_list_user_uncheck_all">Bỏ chọn tất cả</string>
    <string name="fab_menu_list_user_delete">Xóa nhân viên</string>
    <string name="fab_menu_list_user_undelete">Phục hồi nhân viên đã xóa</string>
    <string name="fab_menu_list_user_send_sms">Gửi sms</string>
</resources>