<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	>
	<item android:id="@+id/contextual_menu_list_user_item_checked_all"
		android:title="@string/fab_menu_list_user_check_all"
		android:orderInCategory="100"
		android:icon="@drawable/ic_checkbox_marked_black_24dp"
		app:showAsAction="always" />
	<item android:id="@+id/contextual_menu_list_user_item_unchecked_all"
		android:title="@string/fab_menu_list_user_uncheck_all"
		android:orderInCategory="100"
		android:icon="@drawable/ic_checkbox_blank_outline_black_24dp"
		app:showAsAction="always" />
    <item android:id="@+id/contextual_menu_list_user_item_delete"
        android:title="@string/fab_menu_list_user_delete"
        android:orderInCategory="100"
        android:icon="@drawable/ic_account_minus_black_24dp"
        app:showAsAction="always" />
	<item android:id="@+id/contextual_menu_list_user_item_undelete"
        android:title="@string/fab_menu_list_user_undelete"
        android:orderInCategory="100"
		app:showAsAction="always"
        android:icon="@drawable/ic_account_convert_black_24dp" />
	<item android:id="@+id/contextual_menu_list_user_item_send_sms"
		android:title="@string/fab_menu_list_user_send_sms"
		android:orderInCategory="100"
		app:showAsAction="always"
		android:icon="@drawable/ic_message_text_black_24dp" />
</menu>