<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_search_item_settings"
        android:title="@string/menu_search_item_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_account_card_details_black_24dp"
        android:showAsAction="always" />
	<item android:id="@+id/menu_sort_item_settings"
        android:title="@string/menu_report_sortlist"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_sort_black_24dp" />
	<item android:id="@+id/menu_config_item_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_settings_black_24dp" />
	<item android:id="@+id/menu_backup_item_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_cloud_upload_black_24dp" />
		
</menu>