<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >
    <TableLayout
        style="@style/layout_f_w"
        android:stretchColumns="*" >
        <TableRow
            android:id="@+id/tableRow1"
            android:background="#dddddd"
            style="@style/layout_wrap">
            
              <!-- thông tin cơ bản của nhân viên -->
	            <LinearLayout
		        style="@style/layout_f_w"
		        android:id="@+id/first_text"
		        android:orientation="vertical" >
		        
	                  <TextView
	                    android:id="@+id/txtTabBasic"
	                    style="@style/text_title"
	                    android:text="@string/userTitleTabBasic" />
	           </LinearLayout>
	           
	        <!-- Second Tab -->
	            <LinearLayout
		        style="@style/layout_f_w"
		        android:id="@+id/second_text"
		        android:orientation="vertical" >

	                <TextView
	                    android:id="@+id/txtTabWork"
	                    style="@style/text_title"
	                    android:text="@string/userTitleTabWork" />
	        
	           </LinearLayout>
	        <!-- thirth Tab -->
	            <LinearLayout
		        style="@style/layout_f_w"
		        android:id="@+id/thirth_text"
		        android:orientation="vertical" >

	                <TextView
	                    android:id="@+id/txtTabOther"
	                    style="@style/text_title"
	                    android:text="@string/userTitleTabOther" />
	        
	           </LinearLayout>
        </TableRow>
    </TableLayout>
    <!-- Include Tab Indicator  -->
 <include layout="@layout/indicator" android:layout_width="fill_parent" android:layout_height="wrap_content"  />
 
 <android.support.v4.view.ViewPager
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:id="@+id/viewPager" />
</LinearLayout>